<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_view_bg"
    android:orientation="vertical"
    android:layout_weight="10"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/signInActivity_textview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontawesome_pro_solid900"
            android:text="\uf104"
            android:textColor="@color/light_color"
            android:textSize="30sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:text="Đăng Nhập"
        android:textColor="@color/light_color"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_phone_solid"
            android:inputType="textCapCharacters"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            style="@style/Button.LoginWithPhone"
            android:text="Đăng nhập với Số điện thoại"
            tools:ignore="TextViewEdits" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_brand_facebook"
            style="@style/Button.LoginWithFacebook"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            android:inputType="textCapCharacters"
            android:text="Đăng nhập với Facebook"
            tools:ignore="TextViewEdits" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_brand_google_plus"
            android:textSize="16sp"
            android:inputType="textCapCharacters"
            style="@style/Button.LoginWithGoogle"
            android:text="Đăng nhập với Google"
            tools:ignore="TextViewEdits" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textColor="@color/light_color"
        android:text="Hoặc đăng nhập bằng tài khoản của bạn"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:paddingTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:hint="Email"
            android:textColorHint="@color/light_color"
            app:startIconDrawable="@drawable/ic_email_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInActivity_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:textColorHint="@color/light_color"
            android:hint="Mật khẩu của bạn"
            app:startIconDrawable="@drawable/ic_lock_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInActivity_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/light_color"
            android:textAlignment="textEnd"
            android:paddingTop="7dp"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInActivity_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng Nhập"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            style="@style/Button.Login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Chưa có tài khoản?"
                android:textColor="@color/light_color"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/signInActivity_textview_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/string_resgister"
                android:textColor="@color/light_color"
                android:textAlignment="center"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingBottom="5dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy_signin_text_1"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/light_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy_signin_text_2"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/light_color" />

    </LinearLayout>

</LinearLayout>