<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_view_bg"
    android:orientation="vertical"
    android:layout_weight="10"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/signUpActivity_textview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/fontawesome_pro_solid900"
            android:text="\uf104"
            android:textColor="@color/light_color"
            android:textSize="30sp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="10dp"
        android:text="Đăng Ký"
        android:textColor="@color/light_color"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:hint="Họ và tên"
            android:textColorHint="@color/light_color"
            app:startIconDrawable="@drawable/ic_user_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_edittext_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:hint="Số điện thoại"
            android:textColorHint="@color/light_color"
            app:startIconDrawable="@drawable/ic_phone_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:hint="Địa chỉ đặt hàng"
            android:textColorHint="@color/light_color"
            app:startIconDrawable="@drawable/ic_location_dot_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_edittext_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:hint="Thông tin Email"
            android:textColorHint="@color/light_color"
            app:startIconDrawable="@drawable/ic_email_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:textColorHint="@color/light_color"
            android:hint="Mật khẩu"
            app:startIconDrawable="@drawable/ic_lock_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            app:endIconMode="clear_text"
            android:textColorHint="@color/light_color"
            android:hint="Xác nhận mật khẩu"
            app:startIconDrawable="@drawable/ic_lock_keyhole_solid"
            app:startIconTint="@color/light_color"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpActivity_edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpActivity_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng Ký"
            android:textColor="#525252"
            android:inputType="textCapWords"
            android:textSize="17sp"
            style="@style/Button.SignUp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="Đã có tài khoản?"
                android:textColor="@color/light_color"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/signUpActivity_textview_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/string_login"
                android:textColor="@color/light_color"
                android:textAlignment="center"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingBottom="5dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy_signin_text_1"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/light_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy_signin_text_2"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/light_color" />

    </LinearLayout>

</LinearLayout>